:bug: Fix: Solve Stretch Style Issue

--- a/frontend/src/components/dealCard/style.scss
+++ b/frontend/src/components/dealCard/style.scss
@@ -7,11 +7,11 @@ $baseClass: 'dealCard';
     flex-direction: column;
     width: 100%;
     align-items: stretch;
-    justify-content: flex-start;
+    justify-content: space-between;
     background-color: color('white');
     padding-bottom: px-to-rem(12);
     cursor: pointer;
-
+    height: 100%;
 
     &__wrapper {
         display: flex;
